[package]
name = "cstick"
version = "0.1.0"
authors = ["Peter Sherman <pfnsec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
bevy_input = "0.3.0"
bevy_rapier3d = "0.5.0"
ncollide3d = "0.23"